🛂 Add a hack to force sign out

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.10",
+    "axios": "^1.11.0",
+    "mongodb": "^6.19.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
